--- a/RedditClone/RedditClone/Base.lproj/Main.storyboard
+++ b/RedditClone/RedditClone/Base.lproj/Main.storyboard
@@ -10,49 +10,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RedditClone" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1757" y="-711"/>
-        </scene>
-        <!--SearchVC-->
-        <scene sceneID="Ji6-Q6-7uM">
-            <objects>
-                <viewController id="h39-6i-7Jb" userLabel="SearchVC" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="avU-eN-3H9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vbb-tY-2wt">
-                                <rect key="frame" x="134" y="272" width="53" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="0.92542213201522827" green="0.92552995681762695" blue="0.9253726601600647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="Fdd-5A-lvd"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="" image="searchTabbarIcon" selectedImage="searchTabbarIcon" springLoaded="YES" id="MJe-Vr-5u7">
-                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-17"/>
-                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1u3-Zt-u3t" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="54" y="-356"/>
-        </scene>
         <!--PostVC-->
         <scene sceneID="CoA-cI-8dr">
             <objects>
@@ -105,6 +62,22 @@
             </objects>
             <point key="canvasLocation" x="908" y="319"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="yJZ-IE-wKN">
+            <objects>
+                <viewController id="UCO-1k-kfu" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9nY-iH-eS7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="7t2-fj-kYY"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="searchTabbarIcon" selectedImage="searchTabbarIcon" id="Wti-fq-Iqo"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HmH-bH-jPJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-21" y="-422"/>
+        </scene>
         <!--ChatVC-->
         <scene sceneID="J62-bA-Rfg">
             <objects>
@@ -133,31 +106,14 @@
             <point key="canvasLocation" x="889" y="-469"/>
         </scene>
         <!--HomeVC-->
-        <scene sceneID="eJx-ev-kWF">
+        <scene sceneID="zBR-PJ-bkI">
             <objects>
-                <viewController id="etd-c0-l4g" userLabel="HomeVC" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="s5R-Ot-fTI">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0s-Bk-0FC">
-                                <rect key="frame" x="136" y="272" width="48" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" red="0.92549019607843142" green="0.92549019607843142" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <viewLayoutGuide key="safeArea" id="yM2-jL-yiZ"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="" image="homeTabbarIcon " selectedImage="homeTabbarIcon " springLoaded="YES" id="5cK-wA-LbA">
-                        <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-13"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9xY-hj-EBP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="dva-6Q-S7H" userLabel="HomeVC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="homeTabbarIcon " selectedImage="homeTabbarIcon " id="lVz-66-PNF"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="841-2b-cTS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.5" y="-1020.4225352112676"/>
+            <point key="canvasLocation" x="53" y="-1180"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="2N5-id-2bS">
@@ -172,8 +128,8 @@
                         <color key="selectedImageTintColor" red="0.083795912563800812" green="0.77031147480010986" blue="0.62928074598312378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="etd-c0-l4g" kind="relationship" relationship="viewControllers" id="fDK-Wi-wKL"/>
-                        <segue destination="h39-6i-7Jb" kind="relationship" relationship="viewControllers" id="RmD-iZ-dK8"/>
+                        <segue destination="dva-6Q-S7H" kind="relationship" relationship="viewControllers" id="Ajk-Zv-pEu"/>
+                        <segue destination="UCO-1k-kfu" kind="relationship" relationship="viewControllers" id="Jfn-ko-NF6"/>
                         <segue destination="jf3-Ek-eMX" kind="relationship" relationship="viewControllers" id="brr-5z-dxU"/>
                         <segue destination="Tr9-Uj-zBA" kind="relationship" relationship="viewControllers" id="4Xg-AY-QB3"/>
                         <segue destination="6HN-Mo-KJg" kind="relationship" relationship="viewControllers" id="uCj-ek-Ag8"/>
